--- a/FixerIoApiWrapper/FixerIoApiWrapper.csproj
+++ b/FixerIoApiWrapper/FixerIoApiWrapper.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<IsPackable>true</IsPackable>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -12,8 +11,21 @@
 		<Version>0.1.0</Version>
 		<Authors>MD. Ibrahim Khan</Authors>
 		<Description>API Wrapper for Fixer.io</Description>
+		<RepositoryUrl>https://github.com/ibrahim-13/FixerIoApiWrapper</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 		<IsPackable>true</IsPackable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<IsPackable>true</IsPackable>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<PackageProjectUrl>https://github.com/ibrahim-13/FixerIoApiWrapper</PackageProjectUrl>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+	</ItemGroup>
 
 </Project>
